--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="greeting">Hai, Yofan Ardian</string>
+    <string-array name="pilihan_fase">
+        <item>Fase 4 - Level 1</item>
+        <item>Fase 4 - Level 2</item>
+        <item>Fase 4 - Level 3</item>
+        <item>Fase 5 - Level 1</item>
+        <item>Fase 5 - Level 2</item>
+        <item>Fase 5 - Level 3</item>
+        <item>Fase 6 - Level 1</item>
+        <item>Fase 6 - Level 2</item>
+        <item>Fase 6 - Level 3</item>
+    </string-array>
 </resources>
